# three

./: .env  .env.example  .eslintrc.js  .gitignore  .rubocop.yml  .tool-versions  Dockerfile  Gemfile  LICENSE.md  Makefile  README.md  bitrise.yml  compose.yml  cucumber.js  deploy.sh  docker-compose.test.yml  docker-compose.yml  index.html  jest.config.ts  package-lock.json  package.json  tsconfig.json
editor/: .clang-format  CMakeLists.txt  Dockerfile  Makefile  README.md  docker-compose.yml
editor/Web/: CMakeLists.txt
editor/Web/resources/shaders/: basic.es3.frag
editor/app/: CMakeLists.txt  main.cpp
editor/app/shaders/: basic.vert  unlit.frag
editor/docker/: desktop.Dockerfile  web.Dockerfile
editor/emscripten/: CMakeLists.txt
editor/src/: CMakeLists.txt  main.cpp  my_lib.cpp  my_lib.h
editor/src/app/: dev_key_listener.h  editor.cpp  editor.h  editor_api.cpp  editor_api.h  editor_callbacks.cpp  editor_callbacks.h  rendering.cpp  rendering.h
editor/src/app/algorithm/: draw_rect.cpp  draw_rect.h  flip_horizontal.cpp  flip_horizontal.h  flip_vertical.cpp  flip_vertical.h  rotate.cpp  rotate.h  shear.cpp  shear.h  shear_horizontal.cpp  shear_horizontal.h  shear_utils.h  shear_vertical.cpp  shear_vertical.h  tile_operations.cpp  tile_operations.h
editor/src/app/api/: emscripten_event_emitter.cpp  emscripten_event_emitter.h
editor/src/app/core/: colors.h
editor/src/app/document/: active_frame.cpp  active_frame.h  canvas.cpp  canvas.h  checkerboard.cpp  checkerboard.h  document.cpp  document.h  document_factory.cpp  document_factory.h  document_handler.cpp  document_handler.h  document_store.cpp  document_store.h  drawing.cpp  drawing.h  drawing_state.cpp  drawing_state.h  frame.cpp  frame.h  frame_handler.cpp  frame_handler.h  frame_impl.cpp  frame_impl.h  frame_store.cpp  frame_store.h  layer_handler.cpp  layer_handler.h  resize_drawing.cpp  resize_drawing.h  selection_buffer.cpp  selection_buffer.h  update_screen_bounds.cpp  update_screen_bounds.h
editor/src/app/editor/: editor_state.h
editor/src/app/event/: event_emitter.cpp  event_emitter.h
editor/src/app/model/: point.h  rectangle.cpp  rectangle.h
editor/src/app/rendering/: image_target_renderer.cpp  image_target_renderer.h  rendering.cpp  rendering.h  screen_target_renderer.cpp  screen_target_renderer.h  target_renderer.cpp  target_renderer.h
editor/src/app/service/: color_palette.cpp  color_palette.h  services.cpp  services.h
editor/src/app/tool/: brush.cpp  brush.h  brush_tool.cpp  brush_tool.h  color_picker_tool.cpp  color_picker_tool.h  colorable.cpp  colorable.h  erase_tool.cpp  erase_tool.h  pan_tool.cpp  pan_tool.h  pointer_info.cpp  pointer_info.h  rectangle_tool.cpp  rectangle_tool.h  tool.cpp  tool.h  tool_handler.cpp  tool_handler.h  tool_store.cpp  tool_store.h  zoom_tool.cpp  zoom_tool.h
editor/src/app/utils/: declarations.h
editor/src/editing/algorithms/: draw_rect.cpp  draw_rect.h  flip_horizontal.cpp  flip_horizontal.h  flip_vertical.cpp  flip_vertical.h  rotate.cpp  rotate.h  shear_horizontal.cpp  shear_horizontal.h  shear_utils.h  shear_vertical.cpp  shear_vertical.h  tile_operations.cpp  tile_operations.h
editor/src/editing/document/: checkerboard.cpp  checkerboard.h  document.cpp  document.h  document_store.cpp  document_store.h  resize_drawing.cpp  resize_drawing.h  update_screen_bounds.cpp  update_screen_bounds.h
editor/src/editing/editor/: dev_key_listener.h  editor.cpp  editor.h  editor_api.cpp  editor_api.h  editor_callbacks.cpp  editor_callbacks.h  rendering.cpp  rendering.h
editor/src/editing/event/: emscripten_event_emitter.cpp  emscripten_event_emitter.h  event_emitter.h
editor/src/editing/history/: document_history.cpp  document_history.h  tile_undo.cpp  tile_undo.h  undoable.h
editor/src/editing/tool/: pixel_tool.cpp  pixel_tool.h  tool.cpp  tool.h  tool_handler.cpp  tool_handler.h  tool_store.cpp  tool_store.h
editor/src/editing/utils/: conversions.cpp  conversions.h  declarations.h
editor/src/engine/algorithms/: intersect_ray_box.cpp  intersect_ray_box.h
editor/src/engine/graphics/: colors.h
editor/src/engine/layout/: container.cpp  container.h
editor/src/engine/maths/: mathFuncs.h  vec2_int.cpp  vec2_int.h
editor/src/engine/structure/: canvas.cpp  canvas.h  drawing3d.cpp  drawing3d.h
editor/src/features/frame/: frame_player.cpp  frame_player.h
editor/src/features/sprite_sheet/: sprite_sheet.cpp  sprite_sheet.h
editor/src/maths/: mat4.cpp  mat4.h  mathFuncs.cpp  mathFuncs.h  vec2.cpp  vec2.h  vec2_int.cpp  vec2_int.h  vec3.cpp  vec3.h  vec4.cpp  vec4.h
editor/src/maths/data/: bounds.cpp  bounds.h  bounds3.cpp  bounds3.h  bounds_int.cpp  bounds_int.h  ray3.cpp  ray3.h
editor/src/shaders/: basic.vert
editor/tests/: CMakeLists.txt  default.runsettings  main.cpp
editor/tests/maths/: vec2_test.cpp  vec2_test.h
editor/tests/src/editor/: test_event_emitter.h  test_event_listener.cpp  test_event_listener.h
editor/tests/src/maths/: mat4_test.cpp  vec2_test.cpp
editor/tests/src/test_helpers/: common_tool_funcs.cpp  common_tool_funcs.h  test_document_factory.h  test_event_emitter.cpp  test_event_emitter.h
engine/Sparky-core/: CMakeLists.txt  Sparky-core.vcxproj  Sparky-core.vcxproj.filters  main.cpp
engine/Sparky-core/src/app/: editor.cpp  editor.h  editor_api.cpp  editor_api.h  editor_config.h  rendering.cpp  rendering.h
engine/Sparky-core/src/editor/: editor.cpp  editor.h  editor_config.h  editor_state.h
engine/Sparky-core/src/graphics/: batchRenderer2d.cpp  batchRenderer2d.h  renderable2d.cpp  renderable2d.h  renderer2d.h  shader.cpp  shader.h  simple2dRenderer.cpp  simple2dRenderer.h  sprite.cpp  sprite.h  staticSprite.cpp  staticSprite.h  window.cpp  window.h
engine/Sparky-core/src/maths/: mat4.cpp  mat4.h  mathFuncs.cpp  mathFuncs.h  vec2.cpp  vec2.h  vec2_int.cpp  vec2_int.h  vec3.cpp  vec3.h  vec4.cpp  vec4.h
engine/Sparky-core/src/shaders/: basic.frag  basic.vert  unlit.frag
engine/Sparky-core/src/utils/: fileUtils.h  timer.h
engine/Web/: CMakeLists.txt
engine/Web/embed/shaders/: basic_unlit.es3.frag
(+2414 files in other folders)
